--- a/BookStore.API/appsettings.json
+++ b/BookStore.API/appsettings.json
@@ -7,7 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    "BookStoreDB": "Server=DESKTOP-LF6HS9V\\SQLEXPRESS; Database=BookStoreAPI; Integrated Security=True"
+    "BookStoreDB": "Server=DESKTOP-1PNMBHQ\\SQLEXPRESS; Database=BookStoreAPI; Integrated Security=True"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "User",
+    "ValidIssuer": "https://localhost:44340",
+      "Secret": "ThisIsMySecureKey12345678"
+  }
 }
